# Spell

./: .env-exemple  .gitignore  Dockerfile  Pipfile  docker-compose.yaml  pyproject.toml  start-dev.sh  start-prefect.sh
config/: settings.py  urls.py
helm/: .helmignore  Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  ingress.yaml  persistence.yaml  secrets.yaml  service.yaml
league/: models.py  serializers.py  service.py  urls.py  views.py
league/migrations/: 0001_initial.py  0002_alter_queue_league_id.py
league/workflows/: get_summoner_data.py  get_summoner_data.yaml  tasks.py
rush/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
rush/migrations/: 0001_initial.py  0002_rename_follower_follower_follow_and_more.py  0003_alter_follower_follow_alter_follower_user.py
spell/: permissions.py  serializers.py  tests.py  urls.py  views.py
spell/migrations/: 0001_initial.py
