[tool.poetry]
name = "spell"
version = "0.1.0"
description = ""
authors = ["lucasviniciusp <lucasviinicius03@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.1.4"
djangorestframework = "3.14.0"
django-filter = "22.1"
djangorestframework-simplejwt = "5.2.2"
requests = "2.28.1"
django-cors-headers = "3.13.0"
python-decouple = "3.6"
django-extensions = "3.2.1"
psycopg2-binary = "2.9.5"
sentry-sdk = "1.12.1"
prefect = "2.7.4"

[tool.poetry.dev-dependencies]
black = "22.12.0"
model-bakery = "1.9.0"
parameterized = "0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
